--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,2 +1,10 @@
+@import 'node_modules/slick-carousel/slick/slick.scss';
 @import 'fonts';
 @import 'start';
+@import 'header';
+@import 'menu';
+@import 'footer';
+@import 'footer-body';
+@import 'fairy';
+@import 'capadocia-slider';
+@import 'our-trip';
