--- a/app/sass/_fonts.scss
+++ b/app/sass/_fonts.scss
@@ -1,27 +1,37 @@
 @font-face {
-    font-family: 'balqis';
-    src: url('../fonts/balqis-webfont.woff2') format('woff2'),
-         url('../fonts/balqis-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+     font-family: 'balqis';
+     src: url('../fonts/balqis-webfont.woff2') format('woff2'),
+          url('../fonts/balqis-webfont.woff') format('woff');
+     font-weight: normal;
+     font-style: normal;
 }
 
 @font-face {
-    font-display: swap;
-    font-family: 'Roboto Condensed';
-    font-style: normal;
-    font-weight: 300;
-    src: 
-         url('../fonts/roboto-condensed-v25-latin-300.woff2') format('woff2'),
-         url('../fonts/roboto-condensed-v25-latin-300.woff') format('woff'); 
-  }
+     font-display: swap;
+     font-family: 'Roboto Condensed';
+     font-style: normal;
+     font-weight: 300;
+     src:
+          url('../fonts/roboto-condensed-v25-latin-300.woff2') format('woff2'),
+          url('../fonts/roboto-condensed-v25-latin-300.woff') format('woff');
+}
 
-  @font-face {
-    font-display: swap; 
-    font-family: 'Roboto Condensed';
-    font-style: normal;
-    font-weight: 400;
-    src:
-         url('../fonts/roboto-condensed-v25-latin-regular.woff2') format('woff2'), 
-         url('../fonts/roboto-condensed-v25-latin-regular.woff') format('woff');
-  }
+@font-face {
+     font-display: swap;
+     font-family: 'Roboto Condensed';
+     font-style: italic;
+     font-weight: 300;
+     src:
+          url('../fonts/roboto-condensed-v25-latin-300italic.woff2') format('woff2'),
+          url('../fonts/roboto-condensed-v25-latin-300italic.woff') format('woff');
+}
+
+@font-face {
+     font-display: swap;
+     font-family: 'Roboto Condensed';
+     font-style: normal;
+     font-weight: 400;
+     src:
+          url('../fonts/roboto-condensed-v25-latin-regular.woff2') format('woff2'),
+          url('../fonts/roboto-condensed-v25-latin-regular.woff') format('woff');
+}
