--- a/app/sass/_hotel.scss
+++ b/app/sass/_hotel.scss
@@ -7,33 +7,28 @@
         display: inline-flex;
         margin-bottom: 100px;
 
-        &-header {
-            font-family: 'Balqis';
-            font-style: normal;
-            font-weight: 400;
-            font-size: 96px;
-            line-height: 128px;
-            color: #E2AB3F;
-        }
-
-        &-low-text {
-            position: absolute;
+        &-text {
             bottom: 0;
             right: -95px;
-            font-style: italic;
-            font-weight: 300;
-            font-size: 24px;
-            line-height: 28px;
         }
     }
 
     &__middle {
-        display: grid;
-        grid-template-columns: min-content min-content;
-        gap: 90px;
+        display: flex;
     }
 
     &__body {
+        width: 60%;
+        padding-left: 100px;
+        &-pic {
+            width: 40%;
+        }
+
+        &-pic-item {
+            object-fit: cover;
+            height: 100%;
+            max-width: 100%;
+        }
 
         &-text {
             padding-bottom: 20px;
@@ -49,8 +44,8 @@
         &-galery {
             padding-top: 80px;
             display: grid;
-            grid-template-columns: min-content min-content;
-            grid-auto-rows: min-content;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 1fr 1fr;
             gap: 50px;
         }
     }
