--- a/app/sass/_our-trip.scss
+++ b/app/sass/_our-trip.scss
@@ -17,24 +17,11 @@
         margin-bottom: 108px;
     }
 
-    &__header {
-        font-family: 'Balqis', 'Arial', sans-serif;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 96px;
-        line-height: 128px;
-        color: #E2AB3F;
-
-        &-low-text {
-            position: absolute;
-            right: -80px;
-            bottom: 0;
-            font-style: italic;
-            font-weight: 300;
-            font-size: 24px;
-            line-height: 28px;
-        }
+    &__top-text {
+        right: -80px;
+        bottom: 0;
     }
+
 
     &__item {
         padding-bottom: 50px;
